pxc/tests/test_130_constvec/csvec4.px
namespace csvec4;
public import common -;

{
  svarray{int} v;
  v.push_back(3);
  v.push_back(4);
  v.push_back(5);
  csvarray{int} w = v; // error
  println(w);
}
